# llm-gateway

./: Cargo.toml  README.md  test_chat_completion.py
python_tests/: chat_completion.py
src/: chat_completions.rs  endpoint_types.rs  main.rs  multipart.rs  result.rs  types.rs
src/core/: client.rs  gateway.rs  message.rs  mod.rs  result.rs
src/web_interface/: mod.rs  result.rs  router.rs
